# FrequencyAnalysis

./: .gitignore  CLAUDE.md  CLUSTER_SETUP.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  run_experiments.sh  run_phase2_full.sh
data/: dataset.py
experiments/results/alexnet_phase2/: learned_mask_viz.npy  summary.txt
experiments/results/resnet18_phase2/: learned_mask.pt  learned_mask_viz.npy  summary.txt  training_history.pt
experiments/results/resnet18_phase2_baseline/: learned_mask.pt  learned_mask_viz.npy  summary.txt  training_history.pt
experiments/results/resnet50_phase2/: learned_mask_viz.npy  summary.txt
experiments/results/vgg16_phase2/: learned_mask_viz.npy  summary.txt
experimentsGPU/: EXPERIMENTS.md  README.md
experimentsGPU/Phase1/: README.md
experimentsGPU/Phase2/: README.md  phase2_evaluation.ipynb  resnet18_phase2.ipynb  resnet18_phase2_v2.ipynb  resnet18_phase2_v3.ipynb
experimentsGPU/Phase3/: README.md  resnet18_phase3.1.ipynb  resnet18_phase3.2.ipynb  resnet18_phase3.ipynb
experimentsGPU/results/alexnet/: learned_mask.pt  summary.txt  training_history.pt
experimentsGPU/results/resnet18/: learned_mask.png.xmp  learned_mask.pt  summary.txt  training_history.pt
experimentsGPU/results/resnet18_phase2_v3/: learned_mask.pt  summary.txt  training_history.pt
experimentsGPU/results/resnet50/: learned_mask.pt  summary.txt  (+1 more)
frequency/: __init__.py  mask.py  pipeline.py  transforms.py
scripts/: cache_imagenet_100k.py  cache_imagenet_full.py  distributed.py  train_phase2.py  train_phase3.2.py  train_phase3_2.py
(+3 files in other folders)
